--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cheerio": "^1.0.0",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
+    "expo-file-system": "^17.0.1",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -31,6 +32,9 @@
     "express": "^4.21.0",
     "jsdom": "^25.0.1",
     "node-html-parser": "^6.1.13",
+    "openai": "^4.67.2",
+    "pdf.js-extract": "^0.2.1",
+    "pdfjs-dist": "^4.7.76",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
