--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-screens": "3.31.1",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-web": "~0.19.10",
+    "react-native-web-hover": "^0.2.9",
     "unirest": "^0.6.0"
   },
   "devDependencies": {
